--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h1 class="chart">
           Ліпша <br> суперечка <br> детективів
       </h1>
-        <button type="button" class="btn btn-warning rounded-pill main_btn">Дізнатись більше</button>
+        <button type="button" class="btn btn-warning rounded-pill main_btn text-center">Дізнатись більше</button>
     </article>
     </div>
 </section>
